--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -2,6 +2,7 @@
     display: flex;
     height: 100vh;
     font-family: 'Arial', sans-serif;
+    overflow: hidden;
   }
   
   .login-form-container {
@@ -11,12 +12,18 @@
     padding: 2rem;
     background-color: white;
     max-width: 450px;
+    justify-content: center; 
+    align-items: flex-start; 
+    box-sizing: border-box;
+    position: relative;
   }
   
   .logo-container {
     display: flex;
     align-items: center;
+    margin-top: 2rem;
     margin-bottom: 1rem;
+    align-self: flex-start;
   }
   
   .logo {
@@ -42,14 +49,20 @@
   
   .welcome-text {
     margin-bottom: 2rem;
+    align-self: flex-start;
   }
   
   .welcome-text h2 {
     font-size: 1.5rem;
     color: #333;
     font-weight: normal;
+    text-align: left;
   }
   
+  form {
+    width: 100%;
+  }
+
   .form-group {
     margin-bottom: 1.5rem;
   }
@@ -103,6 +116,7 @@
   
   .register-link {
     text-align: center;
+    margin-bottom: 2rem;
   }
   
   .register-link a {
@@ -112,19 +126,29 @@
   
   .image-container {
     flex: 3;
-    
+    background-image: url('../assets/Lithu.png');
     background-size: cover;
     background-position: center;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
+  }
+
+  .background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
   }
   
   .overlay-text {
     color: white;
     text-align: center;
     z-index: 2;
+    position: relative;
   }
   
   .overlay-text h1 {
@@ -143,10 +167,13 @@
   @media (max-width: 768px) {
     .login-container {
       flex-direction: column;
+      height: 100vh;
     }
     
     .login-form-container {
       max-width: 100%;
+      padding: 1rem;
+      flex: 1;
     }
     
     .image-container {
